# MarketResearchAI

./: .gitignore  DEVCONTAINER_CHANGELOG.md  LICENSE  README.md  embed_index.py  infer_pipeline.py  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: build_and_push_images.yml  ci.yml  deploy_model.yml  smoke_test_deploy.yml
data/: documents.json
docker/: Dockerfile.embed
infra/: deployment_architecture.md
infra/gpu/: ner-deployment-gpu.yaml
infra/helm/embedder/: Chart.yaml  values.yaml
infra/helm/embedder/templates/: _helpers.tpl  cronjob.yaml
infra/helm/inference-api/: Chart.yaml  values.yaml
infra/helm/inference-api/templates/: _helpers.tpl  deployment.yaml
ml/: labeling_strategy.md  train_ner.py
ml/data/: ner_sample.jsonl
ner_service/: Dockerfile  __init__.py  app.py  requirements.txt
run_reports/: sample_run_1.json  sample_run_2.json  sample_run_3.json
scripts/: build_images_save_tarballs.sh  push_model_to_s3.py  redeploy_after_model_upload.sh
tests/: test_embed_index.py  test_infer_pipeline.py  test_ner_service.py
